<resources>
    <string name="app_name">Somnia</string>
    <string name="logIn_layout_title">Somnia</string>
    <string name="logIn_button">Log In</string>
    <string name="send_button">Send</string>
    <string name="register_button">Register</string>
    <string name="register_layout_title">Register</string>
    <string name="name_title">Name</string>
    <string name="email_title">Email</string>
    <string name="password_title">Password</string>
    <string name="c">Repeat the password</string>
    <string name="register_title">Register</string>
    <string name="signIn_button">Sign In</string>
    <string name="signUp_button">Sign Up</string>
    <string name="cancel_button">Cancel</string>
    <string name="newAlarm_layout_title">NEW ALARM</string>
    <string name="title_title">Title</string>
    <string name="title_text">Alarm</string>
    <string name="hour_title">Hour</string>
    <string name="repeat_title">Repeat</string>
    <string name="vibration_switch">Vibration</string>
    <string name="description_title">Description</string>
    <string name="add_button">Add</string>
    <string name="accept_button">Accept</string>
    <string name="edit_button">Edit</string>
    <string name="alarmSwitch_text">Alarm \n hour </string>
    <string name="alarmSwitch_text2">Alarm 2 \n hour </string>
    <string name="alarmSwitch_text3">Alarm  3 \n hour </string>
    <string name="alarm_layout_title">ALARMS</string>
    <string name="go_bed">22:30</string>
    <string name="i_must_get_in_bed_at">I must get in bed at:</string>
    <string name="sleeping_cycle">Sleeping cycle</string>
    <string name="hours">h</string>
    <string name="hours_to_sleep">8:30</string>
    <string name="in_order_to_sleep">In order to sleep:</string>
    <string name="wake_up">6:30</string>
    <string name="i_m_waking_up_at">I\'m waking up at:</string>
    <string name="sleep_calculator">SLEEP CALCULATOR</string>
    <string name="valuations">VALUATIONS</string>
    <string name="see_your_ratings">SEE YOUR RATINGS</string>
    <string name="toggle_Sleep">Sleep</string>
    <string name="new_Email">Introduce your new e-mail</string>
    <string name="top_settings">SETTINGS</string>
    <string name="log_out">LOGOUT</string>
    <string name="del_Acc">DELETE ACCOUNT</string>
    <string name="ch_Email">CHANGE E-MAIL</string>
    <string name="ch_Pass">CHANGE PASSWORD</string>
    <string name="password">Introduce your password</string>
    <string name="new_Password">Introduce your new password</string>
    <string name="repeat_new_Password">Repeat your new password</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="ret">RETURN</string>
    <string name="current_Email">Introduce your current e-mail</string>
    <string name="alarm_title">Alarm title</string>
    <string name="rate_your_sleep">Rate your sleep</string>
    <string name="sport">Sport</string>
    <string name="coffee">Coffee</string>
    <string name="alcohol">Alcohol</string>
    <string name="comments">Add a comment</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="rate_last_sleep">RATE LAST SLEEP</string>
    <string name="Return">Return</string>
    <string name="comment_text">My last sleep was...</string>
    <string name="Calendar">CALENDAR</string>
    <string name="repeatPassword_title">Repeat password</string>
    <string name="date">Pick a date</string>
    <string name="pick_a_way_to_see_your_ratings">HOW DO YOU WANT TO SEE THEM?</string>
    <string name="list">List</string>
    <string name="calculate_time_i_must_get_in_bed">Calculate time I must get in bed</string>
    <string name="calculate_time_i_must_wake_up">Calculate time I must wake up</string>
    <string name="intro_text">Hi! Let\'s listen to some available data sources! Check the menu for more actions!</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="action_unregister_listener">Unregister listener</string>
    <string name="action_settings">Settings</string>
    <string name="horas_dormidas">6</string>
    <string-array name="repeat_array">
        <item>None</item>
        <item>Weekly</item>
        <item>Every 2 days</item>
        <item>Monthly</item>
    </string-array>

    <style name="Title" parent="AppTheme">
        <item name="android:textSize">35sp</item>
    </style>

    <style name="Text" parent="AppTheme">
        <item name="android:textSize">20sp</item>
    </style>


</resources>
