<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ChangePassword">

    <TextView
        android:id="@+id/top_chPass"
        android:layout_width="276dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/ch_Email"
        android:fontFamily="@font/reef_family"
        android:hint="@string/ch_Pass"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/current_Email"
        android:layout_width="302dp"
        android:layout_height="41dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/current_Email"
        android:hint="@string/current_Email"
        android:fontFamily="@font/reef_family"
        app:layout_constraintStart_toStartOf="@+id/top_chPass"
        app:layout_constraintTop_toBottomOf="@+id/top_chPass" />

    <EditText
        android:id="@+id/password"
        android:layout_width="302dp"
        android:layout_height="41dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:fontFamily="@font/reef_family"
        app:layout_constraintStart_toStartOf="@+id/current_Email"
        app:layout_constraintTop_toBottomOf="@+id/current_Email" />

    <EditText
        android:id="@+id/new_Password"
        android:layout_width="302dp"
        android:layout_height="41dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="@string/new_Password"
        android:hint="@string/new_Password"
        android:fontFamily="@font/reef_family"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/save_changes"
        android:layout_width="147dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/save_changes"
        android:fontFamily="@font/reef_family"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/new_Password"
        app:layout_constraintTop_toBottomOf="@+id/new_Password" />

    <Button
        android:id="@+id/ret"
        android:layout_width="147dp"
        android:layout_height="50dp"
        android:layout_marginTop="112dp"
        android:text="@string/ret"
        android:fontFamily="@font/reef_family"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/save_changes"
        app:layout_constraintTop_toTopOf="@+id/save_changes" />

</androidx.constraintlayout.widget.ConstraintLayout>