<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="373dp"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingTop="32dp"
        android:paddingRight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396">


        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_title"
            style="@style/Text"/>

        <EditText
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_title"
            style="@style/Text"/>

        <EditText
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/passwordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_title"
            style="@style/Text"/>

        <EditText
            android:id="@+id/paswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/repeatPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeatPassword_title"
            style="@style/Text"/>

        <EditText
            android:id="@+id/repeatPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <TextView
        android:id="@+id/registerLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/register_layout_title"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51"
        style="@style/Title"/>

    <Button
        android:id="@+id/register"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:text="@string/register_button"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="615dp" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="615dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

