<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="407dp"
        android:layout_height="405dp"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingTop="32dp"
        android:paddingRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="115dp">

        <TextView
            android:id="@+id/titleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_title" />

        <EditText
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/title_text" />

        <TextView
            android:id="@+id/hourTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hour_title" />

        <EditText
            android:id="@+id/hourText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <TextView
            android:id="@+id/repeatTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_title" />

        <Spinner
            android:id="@+id/repeatSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/vibrationSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vibration_switch" />

        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_title" />

        <EditText
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <TextView
        android:id="@+id/newAlarmLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/newAlarm_layout_title"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/add"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="140dp"
        android:text="@string/add_button"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/cuadrotoolbar_settings"
        android:layout_width="411dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#a0000000" />

    <ImageView
        android:id="@+id/graficas_settings"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cuadrotoolbar_settings"
        app:srcCompat="@drawable/button_graph" />

    <ImageView
        android:id="@+id/alarmas_settings"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/principal_settings"
        app:layout_constraintStart_toEndOf="@+id/graficas_settings"
        app:layout_constraintTop_toTopOf="@+id/cuadrotoolbar_settings"
        app:srcCompat="@drawable/clockpressed" />

    <ImageView
        android:id="@+id/principal_settings"
        android:layout_width="57dp"
        android:layout_height="45dp"
        android:layout_marginStart="179dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cuadrotoolbar_settings"
        app:layout_constraintTop_toTopOf="@+id/cuadrotoolbar_settings"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/calculadora_settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/principal_settings"
        app:layout_constraintTop_toTopOf="@+id/cuadrotoolbar_settings"
        app:srcCompat="@drawable/button_calculator" />

    <ImageView
        android:id="@+id/settings_settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cuadrotoolbar_settings"
        app:layout_constraintStart_toEndOf="@+id/calculadora_settings"
        app:layout_constraintTop_toTopOf="@+id/cuadrotoolbar_settings"
        app:srcCompat="@drawable/button_settings" />

</androidx.constraintlayout.widget.ConstraintLayout>