<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AlarmsActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="407dp"
        android:layout_height="480dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingTop="32dp"
            android:paddingRight="32dp">

            <Switch
                android:id="@+id/alarm_switch"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarmSwitch_text" />

            <Switch
                android:id="@+id/alarm_switch2"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarmSwitch_text2" />

            <Switch
                android:id="@+id/alarm_switch3"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarmSwitch_text3" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/alarmLayoutTitle"
        style="@style/Title"
        android:layout_width="155dp"
        android:layout_height="54dp"
        android:text="@string/alarm_layout_title"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

    <fragment
        android:id="@+id/toolbar"
        class="com.example.somnia.Toolbar"
        android:layout_width="410dp"
        android:layout_height="77dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </fragment>

</androidx.constraintlayout.widget.ConstraintLayout>