<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/top_calculator"
        style="@style/Title"
        android:layout_width="270dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sleep_calculator"
        android:fontFamily="@font/reef"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/waking_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/i_m_waking_up_at"
        android:fontFamily="@font/reef"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/top_calculator"
        app:layout_constraintTop_toBottomOf="@+id/top_calculator" />


    <View
        android:id="@+id/bar1"
        android:layout_width="250dp"
        android:layout_height="3dp"
        android:layout_marginTop="25dp"
        android:background="#B1AEC2"
        app:layout_constraintStart_toStartOf="@+id/waking_up"
        app:layout_constraintTop_toBottomOf="@+id/waking_up" />

    <TextView
        android:id="@+id/to_sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/in_order_to_sleep"
        android:fontFamily="@font/reef"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/waking_up"
        app:layout_constraintTop_toBottomOf="@+id/waking_up" />

    <View
        android:id="@+id/bar2"
        android:layout_width="250dp"
        android:layout_height="3dp"
        android:layout_marginTop="25dp"
        android:background="#B1AEC2"
        app:layout_constraintStart_toStartOf="@+id/to_sleep"
        app:layout_constraintTop_toBottomOf="@+id/to_sleep" />

    <TextView
        android:id="@+id/in_bed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/i_must_get_in_bed_at"
        android:fontFamily="@font/reef"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/to_sleep"
        app:layout_constraintTop_toBottomOf="@+id/to_sleep" />

    <fragment
        android:id="@+id/toolbar"
        class="com.example.somnia.Toolbar"
        android:layout_width="413dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </fragment>

</androidx.constraintlayout.widget.ConstraintLayout>