<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.Buttons_ListCalendar">

    <TextView
        android:id="@+id/buttonsLayoutTitle"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pick_a_way_to_see_your_ratings"
        android:fontFamily="@font/reef"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calendar"
        android:layout_width="320dp"
        android:layout_height="130dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/card_background"
        android:backgroundTint="#a0000000"
        android:text="@string/Calendar"
        android:textColor="#fff"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonsLayoutTitle"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_listValuations"
        android:layout_width="320dp"
        android:layout_height="130dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/card_background"
        android:backgroundTint="#a0000000"
        android:text="@string/list"
        android:textColor="#fff"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:text="Return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_listValuations"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>