<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="295dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="116dp"
        android:paddingLeft="32dp"
        android:paddingTop="32dp"
        android:paddingRight="32dp">

        <TextView
            android:id="@+id/hourTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hour"
            style="@style/Text"/>

        <TextView
            android:id="@+id/repeatTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Repeat"
            style="@style/Text"/>

        <CheckedTextView
            android:id="@+id/vibrationChecked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vibration_switch"
            style="@style/Text"/>

        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Description"
            style="@style/Text"/>
    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:text="Alarm"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51"
        style="@style/Title"/>

    <Button
        android:id="@+id/accept"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:text="@string/accept_button"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="615dp" />

    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/edit_button"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="615dp" />
</androidx.constraintlayout.widget.ConstraintLayout>